--- a/src/PortingAssistantVSExtensionClient/Dialogs/TestDeploymentDialog.xaml
+++ b/src/PortingAssistantVSExtensionClient/Dialogs/TestDeploymentDialog.xaml
@@ -6,7 +6,7 @@
              xmlns:ui="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
              xmlns:local="clr-namespace:PortingAssistantVSExtensionClient.Dialogs"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="400" d:DesignWidth="700">
     <Grid Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Width="800" Height="450">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -15,19 +15,30 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-            <Button Content="Deploy" HorizontalAlignment="Left" Margin="670,354,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-        <Button Content="Cacnel" HorizontalAlignment="Left" Margin="538,354,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+            <Button x:Name="DeployButton" Content="Deploy" HorizontalAlignment="Left" Margin="593,317,0,37" Width="75" Click="Button_Click_1"/>
+        <Button Content="Cacnel" HorizontalAlignment="Left" Margin="484,317,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <TextBox x:Name="InputBox1" HorizontalAlignment="Left" Height="23" Margin="91,45,0,0" TextWrapping="Wrap" Text="input1" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="InputBox2" HorizontalAlignment="Left" Height="23" Margin="91,104,0,0" TextWrapping="Wrap" Text="input2" VerticalAlignment="Top" Width="120"/>
-        <Label Content="param1&#xD;&#xA;" HorizontalAlignment="Left" Margin="25,45,0,0" VerticalAlignment="Top"/>
-        <Label Content="param1&#xA;" HorizontalAlignment="Left" Margin="25,45,0,0" VerticalAlignment="Top"/>
-        <Label Content="param2" HorizontalAlignment="Left" Margin="25,101,0,0" VerticalAlignment="Top"/>
-        <ScrollViewer Name ="logs" Visibility="Hidden" VerticalScrollBarVisibility="Auto" HorizontalAlignment="Left" Margin="25,150,20,20" VerticalAlignment="Top" Height="100" Width="600">
+        <Label Content="IAM role" HorizontalAlignment="Left" Margin="25,45,0,0" VerticalAlignment="Top"/>
+        <Label Content="VPC" HorizontalAlignment="Left" Margin="25,101,0,0" VerticalAlignment="Top"/>
+        <Label Content="Subnet" HorizontalAlignment="Left" Margin="25,141,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.534,1.599"/>
+        <ScrollViewer Name ="logs" Visibility="Hidden" VerticalScrollBarVisibility="Auto" HorizontalAlignment="Left" Margin="25,220,20,20" VerticalAlignment="Top" Height="80" Width="600">
             <TextBlock Name="logHolder"  TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" Padding="20" >  
                 <InlineUIContainer>  
                     <TextBlock FontSize="20" FontWeight="Bold"><Run Text="deployment logs"/></TextBlock>  
                 </InlineUIContainer><LineBreak/>
             </TextBlock>
         </ScrollViewer>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="91,144,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <CheckBox x:Name="ADConfigure" Content="AD Configure" HorizontalAlignment="Left" Margin="340,45,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked_1" Unchecked="ADConfigure_Unchecked"/>
+        <CheckBox x:Name="DBConfigure" Content="Database Configure " HorizontalAlignment="Left" Margin="340,112,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked" Unchecked="DBConfigure_Unchecked"/>
+        <TextBox x:Name="ADInput" HorizontalAlignment="Left" Height="23" Margin="460,71,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" RenderTransformOrigin="3.163,-3.612" Visibility="Hidden"/>
+        <Label x:Name="ADLabel" Content="Directory-ID" HorizontalAlignment="Left" Margin="340,68,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.656,0.219" Visibility="Hidden"/>
+        <Label x:Name="DbSecretArnLabel" Content="Database Secret ARN" HorizontalAlignment="Left" Margin="341,138,0,0" VerticalAlignment="Top" RenderTransformOrigin="2.984,-2.146" Visibility="Hidden"/>
+        <Label x:Name="SqlSgLabel" Content="sql-server security group&#xD;&#xA;" HorizontalAlignment="Left" Margin="340,164,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="26" Width="153" Visibility="Hidden"/>
+        <Label x:Name="SqlConnectionLabel" Content="SQL connection string" HorizontalAlignment="Left" Margin="341,197,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.567,0.523" Visibility="Hidden"/>
+        <TextBox x:Name="DbSecretArnInput" HorizontalAlignment="Left" Height="23" Margin="498,141,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Visibility="Hidden"/>
+        <TextBox x:Name="SqlSgInput" HorizontalAlignment="Left" Height="23" Margin="498,169,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Visibility="Hidden"/>
+        <TextBox x:Name="SqlConnectionInput" HorizontalAlignment="Left" Height="23" Margin="498,197,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Visibility="Hidden" RenderTransformOrigin="0.468,0.356"/>
     </Grid>
 </ui:DialogWindow>
