--- a/src/PortingAssistantVSExtensionClient/Dialogs/TestDeploymentDialog.xaml
+++ b/src/PortingAssistantVSExtensionClient/Dialogs/TestDeploymentDialog.xaml
@@ -16,17 +16,19 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Rectangle x:Name="GeneralSettingsFrame" Fill="#FFE5E5E5"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Height="30" Width="150" Margin="10,20,0,0" VerticalAlignment="Top"/>
-        <Label Content="General settings"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="10,20,0,0" VerticalAlignment="Top" FontSize="14" MouseLeftButtonDown="GeneralSettingsFrame_MouseDown" Cursor="Hand" />
-        <Rectangle x:Name="DirectoryServiceFrame" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Height="30" Width="150" Margin="10,60,0,0" VerticalAlignment="Top" />
-        <Label Content="Directory service"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top" FontSize="14" MouseLeftButtonDown="DirectoryServiceFrame_MouseDown" Cursor="Hand"/>
+        <Label Content="Step 1 - General settings"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="10,20,0,0" VerticalAlignment="Top" MouseLeftButtonDown="GeneralSettingsFrame_MouseDown" Cursor="Hand" />
+        <Rectangle x:Name="VPCFrame" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Height="30" Width="150" Margin="10,60,0,0" VerticalAlignment="Top" />
+        <Label Content="Step 2 - VPC"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top" MouseLeftButtonDown="VPC_MouseDown" Cursor="Hand"/>
         <Rectangle x:Name="AdvancedSettingsFrame" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Height="30" Width="150" Margin="10,100,0,0" VerticalAlignment="Top"/>
-        <Label Content="Advanced settings"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top" FontSize="14" MouseLeftButtonDown="AdvancedSettingsFrame_MouseDown" Cursor="Hand"/>
+        <Label Content="Step 3 - Advanced(optional)"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top" MouseLeftButtonDown="AdvancedSettingsFrame_MouseDown" Cursor="Hand"/>
+        <Rectangle x:Name="ReviewFrame" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Height="30" Width="150" Margin="10,140,0,0" VerticalAlignment="Top"/>
+        <Label Content="Step 4 - Review + Deploy"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="10,140,0,0" VerticalAlignment="Top" MouseLeftButtonDown="Review_MouseDown" Cursor="Hand"/>
+
         <Grid x:Name="GeneralSettingGrid" Visibility="Visible" Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Background="White">
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="70"/>
+                <RowDefinition Height="70"/>
+                <RowDefinition Height="70"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
@@ -36,48 +38,39 @@
             <Label Content="AWS Region"  Grid.Row="1"  Margin="20,10,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" />
             <ComboBox x:Name="AwsRegionComboBox"  Grid.Row="1" Margin="25,35,0,0"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="180"/>
             <Label x:Name="RegioneErrorHint"  Content=""  Grid.Row="1"  Margin="220,35,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top"  Width="200" />
-            <Label Content="Deployment Project"  Grid.Row="2"  HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top"/>
+            <Label Content="Project"  Grid.Row="2"  HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top"/>
             <ComboBox x:Name="DeploymentProjectComboBox"  Grid.Row="2" Margin="25,25,0,0"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="180"/>
             <Label Content="Deployment Name"  Grid.Row="3"  HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top"/>
             <TextBox x:Name="DeploymentNameTextBox" Grid.Row="3" Height="25" Margin="25,25,0,0" TextWrapping="Wrap"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="180"  Opacity="0.8"/>
-            <GroupBox Header="Notice - Manual Configuration" Grid.Row="4" Height="100" Margin="20,0,30,0" HorizontalAlignment="Stretch" VerticalAlignment="Top" >
-                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,0,0,0" TextWrapping="Wrap" Text="Advanced configuration (virtual private cloud, subdomain, database, etc) may be managed by directly editing the JSON file. (placeholder copy)" />
-            </GroupBox>
-            <Button Content="Next" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" Click="Next_Button_Click_1"/>
-            <Button Content="Back" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
+            <Label Content="10 characters maximum. Only alphanumeric characters are allowed.(spaces, dash, sp.chars)"  Grid.Row="3"  HorizontalAlignment="Left" Margin="20,50,0,0" VerticalAlignment="Top" Opacity="0.81"/>
+            <Button Content="Deploy" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
+            <Button Content="Next" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" Click="Next_Button_Click_1"/>
+            <Button Content="Back" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,210,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
+            <Button Content="Cancel" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,300,20" VerticalAlignment="Bottom" Width="80" Click="Cancel_Click"/>
+
         </Grid>
 
-        <Grid x:Name="DirectoryServicesGrid" Visibility="Hidden" Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Background="White">
+        <Grid x:Name="VPCGrid" Visibility="Hidden" Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Background="White">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
-                <RowDefinition Height="40"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="60"/>
+                <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
-            <Label Content="Directory services"  Grid.Row="0"  Margin="20,20,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
-            <TextBlock Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,50,20,0" TextWrapping="Wrap" Text="The directory in which you want to allow authorized user to authenticate with this application using Windows Authentication. &#xD;&#xA;Note: only AWS managed services are supported." />
-            <CheckBox x:Name="UseAwsAdCheckBox" Grid.Row="1" Content="Connect to AWS managed Active Directory" HorizontalAlignment="Left" Margin="25,10,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" />
-            <Grid x:Name="ADGrid" Grid.Row="2" Visibility="Hidden" Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Label  Grid.Row="0" Content="Active directory Name" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top" />
-                <Label  Grid.Row="0" Content="Chose the active directory your application uses" HorizontalAlignment="Left" Margin="20,20,0,0" VerticalAlignment="Top" />
-                <ComboBox x:Name="ADNameBox" Grid.Row="0"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,45,0,0"  Width="250" SelectionChanged="ADNameBox_SelectionChanged"/>
-                <Label  Grid.Row="1" Content="Directory ID" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top" />
-                <TextBox x:Name="ADIdBox" Grid.Row="1" Height="23" Margin="25,25,0,0" TextWrapping="Wrap"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="250"  IsReadOnly="True"/>
-                <Label  Grid.Row="2" Content="Secrets Manager ARN that has AD username and password" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top" />
-                <ComboBox x:Name="SecretArnBox" Grid.Row="2"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,25,0,0"  Width="250"/>
-
-                <Label  Grid.Row="3" Content="Service Principal Name (only keytab files are needed for now) " HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top" />
-                <TextBox x:Name="SecretPrincipalBox" Grid.Row="3" Height="23" Margin="25,25,0,0" TextWrapping="Wrap"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="250"  />
+            <Label Content="AWS Virtual Private Cloud(VPC) for test deployment"  Grid.Row="0"  Margin="20,20,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+            <TextBlock Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,50,20,0" TextWrapping="Wrap" Text="Each testdeployment requires provisioning of a logically isolated section of the AWS cloud to lauch AWS resources. If desired, you may choose an existing VPC to deploy your .NET application on, otherwise a new VPC must be provisioned." />
+            <RadioButton  x:Name="ExistingVPCCheck" Content="Choose an existing(AWS) VPC" Grid.Row="1" HorizontalAlignment="Left" Margin="25,20,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
+            <Grid x:Name="ExistingVPCGrid" Grid.Row="1" Visibility="Hidden" Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                <ComboBox x:Name="VpcBox"   HorizontalAlignment="Left" VerticalAlignment="Top" Margin="45,40,0,0"  Width="280" SelectionChanged="VpcBox_SelectionChanged"/>
+                <Label Content="VPC subnets"   Margin="40,60,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" />
+                <ComboBox x:Name="VpcSubnetsBox"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="45,85,0,0"  Width="280"/>
             </Grid>
-
-            <Button Content="Next" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" Click="Next_Button_Click_2"/>
-            <Button Content="Back" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" Click="Back_Click_2"/>
+            <RadioButton x:Name="NewVPCCheck" Content="Create a new AWS VPC for this test deployment" Grid.Row="1" HorizontalAlignment="Left" Margin="25,120,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked_1"/>
+            <TextBlock Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="45,140,20,0" TextWrapping="Wrap" Text="Builds and deploys into a new AWS environment consisting of the VPC, subnets, NAT gateway, security groups, bastion hosts, and other infrastracture components." Opacity="0.8" />
+            <Button Content="Deploy" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
+            <Button Content="Next" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" Click="Next_Button_Click_2"/>
+            <Button Content="Back" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,210,20" VerticalAlignment="Bottom" Width="80" Click="Back_Click_2"/>
+            <Button Content="Cancel" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,300,20" VerticalAlignment="Bottom" Width="80" Click="Cancel_Click"/>
         </Grid>
 
         <Grid x:Name="AdvancedSettingsGrid" Visibility="Hidden" Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Background="White">
@@ -87,16 +80,27 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
-            <Label Content="Virtual Private Cloud (VPC) ID"  Grid.Row="0"  Margin="20,20,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
-            <TextBlock Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,50,20,0" TextWrapping="Wrap" Text="Provision a logically section of the AWS cloud to lauch AWS resources. The VPC in which .Net application will be deployed on." />
-            <ComboBox x:Name="VpcBox" Grid.Row="0"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,100,0,0"  Width="250" SelectionChanged="VpcBox_SelectionChanged"/>
-            <TextBlock Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,10,20,0" TextWrapping="Wrap" Text="Provision a logically section of the AWS cloud to lauch AWS resources. The VPC in which .Net application will be deployed on." />
-            <Label Content="VPC subnets"  Grid.Row="1"  Margin="20,50,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" />
-            <ComboBox x:Name="VpcSubnetsBox" Grid.Row="1"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,75,0,0"  Width="250"/>
             <Label Content="Manual configuration with JSON editing"  Grid.Row="2"  Margin="20,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
             <TextBlock Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,30,20,0" TextWrapping="Wrap" Text="Provision a logically section of the AWS cloud to lauch AWS resources. The VPC in which .Net application will be deployed on." />
-            <Button Content="Deploy" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" Click="Next_Button_Click_3"/>
-            <Button Content="Back" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" Click="Back_Button_Click_3"/>
+            <Button Content="Deploy" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
+            <Button Content="Next" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" Click="Next_Button_Click_3"/>
+            <Button Content="Back" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,210,20" VerticalAlignment="Bottom" Width="80" Click="Back_Button_Click_3"/>
+            <Button Content="Cancel" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,300,20" VerticalAlignment="Bottom" Width="80" Click="Cancel_Click"/>
+        </Grid>
+
+        <Grid x:Name="ReviewGrid" Visibility="Hidden" Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Background="White">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="60"/>
+            </Grid.RowDefinitions>
+            <Label Content="This is review"  Grid.Row="2"  Margin="20,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+            <TextBlock Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,30,20,0" TextWrapping="Wrap" Text="Provision a logically section of the AWS cloud to lauch AWS resources. The VPC in which .Net application will be deployed on." />
+            <Button Content="Deploy" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" Click="Deploy_Click"/>
+            <Button Content="Next" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
+            <Button Content="Back" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,210,20" VerticalAlignment="Bottom" Width="80" Click="Back_Button_Click_4"/>
+            <Button Content="Cancel" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,300,20" VerticalAlignment="Bottom" Width="80" Click="Cancel_Click"/>
         </Grid>
 
     </Grid>
